--- a/src/app/home/home.module.css
+++ b/src/app/home/home.module.css
@@ -78,3 +78,30 @@
   height: 10px;
   margin-right: 10px;
 }
+
+.profileBarTeam {
+  height: 20%;
+  padding: 20px 40px;
+}
+
+.teamContainer {
+  height: 100%;
+  align-items: center;
+  gap: 20px;
+}
+
+.teamContainer > div {
+  height: 30px;
+  width: 30px;
+}
+
+.topBar {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 15px;
+  width: 100%;
+  height: 10%;
+  border-bottom: 2px solid #f2f2f2;
+  align-items: center;
+  justify-content: space-between;
+}
