--- a/src/app/home/components/Tasks/style.css
+++ b/src/app/home/components/Tasks/style.css
@@ -1,3 +1,30 @@
 .tasks-container {
   width: 35%;
 }
+
+.categories-filter {
+  height: 10%;
+  border-bottom: 2px solid #f2f2f2;
+  border-right: 2px solid #f2f2f2;
+}
+
+.category-border {
+  height: 100%;
+  width: 5px;
+  border-radius: 5px;
+  background-color: blueviolet;
+  margin-right: 25px;
+}
+
+.categories-filter > select {
+  width: 80%;
+  height: 100%;
+  border: 0;
+  background-color: transparent;
+  font-size: 16px;
+  padding-left: 10px;
+}
+
+.categories-filter > select:focus {
+  outline: none;
+}
